--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,65 @@
+.background__header{
+    background-color: #2a1e7a; 
+    height: 200px;
+}
+.background__body{
+    background-color: #f5f6fc;
+    height: 680px
+}
+.container-fluid{
+    position:relative;
+    margin-top: -850px;
+}
+.card-header{
+    background-color: white !important; 
+    height: 80px;
+    border: 2px !important;
+}
 .card-body{
     background-color:#e9ebef;
     margin-left: 15px;
     margin-right: 15px;
     border: 1px solid #ddd;
+    border-radius: 4px;
 }
-.input{
+.card-footer {
+    background-color: white !important;
+    border: 1px !important;
+}
+.input-value{
     height: 30px;
-    border-radius: 5px;
+    border-radius: 3px;
+    background-color: white;
+    border-width: medium;
 }
 .form-select{
     margin-top: 10px;
+    height: 600px;
+}
+.input-ghosting{
+    height: 30px;
+    border-radius: 5px;
+    border-width: thin;
+}
+.button{
+    height: 30px;
+    border-radius: 3px;
+}
+.form-select__input{
+    height: 30px;
+    background-color:#f5f6fc;
+    border-width: thin;
+}
+.form-select__select{
+    height: 30px;
+}
+.table{
+    color: #2a1e7a !important;
+}
+.table td{
+    background-color: #f5f6fc;
+}
+.card-body_two{
+    overflow-y: scroll;
+    height: 500px;
 }
