--- a/css/main.css
+++ b/css/main.css
@@ -11,20 +11,14 @@
     margin-top: -850px;
 }
 .card-header{
-    background-color: white !important; 
-    height: 80px;
-    border: 2px !important;
+    height: 65px;
 }
 .card-body{
     background-color:#e9ebef;
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-left: 22px;
+    margin-right: 22px;
     border: 1px solid #ddd;
     border-radius: 4px;
-}
-.card-footer {
-    background-color: white !important;
-    border: 1px !important;
 }
 .input-value{
     height: 30px;
@@ -53,16 +47,20 @@
 .form-select__select{
     height: 30px;
 }
-.table{
-    color: #2a1e7a !important;
-}
 .table td{
     background-color: #f5f6fc;
 }
 .card-body_two{
     overflow-y: scroll;
     height: 500px;
+    margin-left: 22px;
+    margin-right: 22px;
 }
 body{
     color: #2a1e7a;
+}
+.input-textbox{
+    background-color: #e9ebef;
+    height: 30px;
+    border-radius: 3px;
 }
